CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(2022-04-13-googletest)

SET(INSTALL_GTEST OFF)
set(CMAKE_CXX_STANDARD 11)

if (${CMAKE_COMPILER_IS_GNUCC})
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
endif()

ADD_SUBDIRECTORY(src/my-valuable-stuff)
INCLUDE_DIRECTORIES(src/my-valuable-stuff)

ADD_SUBDIRECTORY(bin)

ADD_SUBDIRECTORY(googletest)
ADD_SUBDIRECTORY(tests)
